This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 0.3.0
=============
- 

Release 0.2.1
=============
- 

Release 0.2.0
=============
- APP source code deposit
- Transfer External Tools to gstlearnext
- Fix Anamorphosis back transformation (Hermite gaussianToRaw)
- Modify eval() and eval0() for Cov* functions: invert argument order
- Correct when changing the number of variables in an existing CovContext
- Modification of the names of the getDriftXXX functions
- Correction for Variance of Measurement error in Kriging and covMatrix functions
- Reorganization of the Class diagram for AMatrix
- Adding method "reduce" to AMatrix (and related classes) and to Model, ACovAnisoList and CovAniso
- option flag_varZ in Kriging() is restricted to stationary covariances
- new function db_variogram which returns the information on variogram pairs (in a vmap setup)

Release 0.1.38
==============
- Fix Db.toTL


Release 0.1.37
==============
- Plot refactoring (R and Python)


Release 0.1.36
==============
- Add toTL generic method to convert gstlearn objects into corresponding target language objects


Release 0.1.35
==============
- Python 3.11 support


Release 0.1.34
==============
- Update requirements installation procedures in READMEs
- Refactoring of *Mesh* classes
- API cosmetics for PCA / KDD


Release 0.1.33
==============
- Fix segy import for Windows
- FKA demo
- Fix BESSEL_K


Release 0.1.32
==============
- Update publishing workflows


Release 0.1.31
==============
- New potential 1D and 2D jupyter notebook tutorials


Release 0.1.30
==============
- New import / export procedures for vectors in Python and R:
  - handle NA values (no more need of TEST and ITEST in your scripts)
  - accept 1 element (in Python and R) when a function wait for a vector (issue #7)
  - build numpy.array or R vectors (issue #5)
- New class: ProjConvolution